solucionados  errores y modificada url de callback

--- a/client/src/tsconfig.json
+++ b/client/src/tsconfig.json
@@ -14,8 +14,8 @@
       "../node_modules/@types"
     ],
     "types": [
-      "jasmine",
-      "core-js"
+      "jasmine"
+      //"core-js"
     ]
   }
 }
