--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "angular2-google-maps": "^0.15.0",
     "angular2-jwt": "^0.1.19",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
@@ -28,8 +29,8 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-    "@types/core-js": "^0.9.32",
-    "@types/node": "^6.0.42",
+
+    "@types/node": "^6.0.45",
     "angular-cli": "1.0.0-beta.18",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
@@ -41,7 +42,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
+    "tslint": "3.15.1",
     "typescript": "~2.0.3"
   }
 }
