--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.0",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.1.0",
+    "@ngrx/store-log-monitor": "^3.0.2",
     "angular2-google-maps": "^0.15.0",
     "angular2-jwt": "^0.1.19",
     "core-js": "^2.4.1",
@@ -29,7 +34,6 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-
     "@types/node": "^6.0.45",
     "angular-cli": "1.0.0-beta.18",
     "codelyzer": "1.0.0-beta.1",
