--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,6 +18,11 @@ apply plugin:"idea"
 apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.plugins.views-json"
+apply plugin:"codenarc"
+
+codenarc {
+    configFile = rootProject.file("server/config/codenarc/codenarc.groovy")
+}
 
 repositories {
     mavenLocal()
