--- a/client/.editorconfig
+++ b/client/.editorconfig
@@ -12,3 +12,8 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = 0
 trim_trailing_whitespace = false
+
+[*.css]
+charset = utf-8
+indent_style = space
+indent_size = 2
