--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.1.0",
     "@ngrx/store-log-monitor": "^3.0.2",
-    "angular2-google-maps": "^0.15.0",
+    "angular2-google-map-auto-complete": "^2.0.1",
+    "angular2-google-maps": "^0.16.0",
     "angular2-jwt": "^0.1.19",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
