--- a/client/package.json
+++ b/client/package.json
@@ -12,41 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.1.1",
+    "@angular/common": "2.4.4",
+    "@angular/compiler": "2.4.4",
+    "@angular/core": "2.4.4",
+    "@angular/forms": "2.4.4",
+    "@angular/http": "2.4.4",
+    "@angular/platform-browser": "2.4.4",
+    "@angular/platform-browser-dynamic": "2.4.4",
+    "@angular/router": "3.4.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
-    "@ngrx/store-devtools": "^3.1.0",
+    "@ngrx/store-devtools": "^3.2.3",
     "@ngrx/store-log-monitor": "^3.0.2",
-    "angular2-google-map-auto-complete": "^2.0.1",
-    "angular2-google-maps": "^0.16.0",
+    "angular2-google-map-auto-complete": "^2.0.5",
+    "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-rc.2",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "rxjs": "5.0.3",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.45",
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^7.0.0",
     "angular-cli": "1.0.0-beta.18",
-    "codelyzer": "1.0.0-beta.1",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "codelyzer": "2.0.0-beta.4",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "3.2.0",
+    "karma": "1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.2.1",
-    "tslint": "3.15.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.4.0",
+    "protractor": "5.0.0",
+    "ts-node": "2.0.0",
+    "tslint": "4.3.1",
     "typescript": "~2.0.3"
   }
 }
