--- a/client/src/tsconfig.json
+++ b/client/src/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
+    "noImplicitAny": true,
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
