Las fotos de perfil se guardan localmente al ...
registrase.
+ Se devuelve la URL local de la foto de perfil al pedir la información
de un usuario.
+ Agregado boton para dejar de seguir a un usuario.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ client/libpeerconnection.log
 client/npm-debug.log
 client/testem.log
 client/typings
+server/grails-app/views/avatars/*.jpg
 *.iml
 *.ipr
 *.iws
