Imagen de la RV incorpora todos los sitios y ...
lineas entre ellos.
+ Refactorización del codigo de descarga de imagenes.
+ Solucionado bug donde descripción de una RV podia tener como máximo
255 caracteres, en vez de 1000.

--- a/server/grails-app/conf/application.yml
+++ b/server/grails-app/conf/application.yml
@@ -1,5 +1,6 @@
 ---
 grails:
+    serverURL: http://localhost:8080
     profile: angular2
     codegen:
         defaultPackage: apollo
@@ -109,3 +110,10 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+app:
+    google:
+        staticMap:
+            key: AIzaSyBHHo7P7VQWWRFx4kp9CwQQPyNJSNZMbEU
+            language: es
+            region: ar
