--- a/client/package.json
+++ b/client/package.json
@@ -22,18 +22,22 @@
     "@angular/router": "3.4.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
+    "@ngrx/router-store": "^1.2.5",
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.3",
     "@ngrx/store-log-monitor": "^3.0.2",
     "angular2-google-map-auto-complete": "^2.0.5",
     "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "ngrx-store-localstorage": "^0.1.5",
     "rxjs": "5.0.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.41",
+    "@types/lodash": "^4.14.50",
     "@types/node": "^7.0.0",
     "angular-cli": "1.0.0-beta.18",
     "codelyzer": "2.0.0-beta.4",
@@ -44,6 +48,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.4.0",
+    "ngrx-store-freeze": "^0.1.6",
     "protractor": "5.0.0",
     "ts-node": "2.0.0",
     "tslint": "4.3.1",
