--- a/client/src/tsconfig.json
+++ b/client/src/tsconfig.json
@@ -15,7 +15,8 @@
       "../node_modules/@types"
     ],
     "types": [
-      "jasmine"
+      "jasmine",
+      "lodash"
       //"core-js"
     ]
   }
