--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate5:6.0.2"
-        classpath "org.grails.plugins:views-gradle:1.1.1"
+        classpath "org.grails.plugins:hibernate5:6.0.6"
+        classpath "org.grails.plugins:views-gradle:1.1.5"
     }
 }
 
@@ -55,8 +55,8 @@ dependencies {
     compile "org.grails:grails-logging"
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.1.Final"
-    compile "org.hibernate:hibernate-ehcache:5.1.1.Final"
+    compile "org.hibernate:hibernate-core:5.1.2.Final"
+    compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
 
@@ -66,11 +66,14 @@ dependencies {
 
     console "org.grails:grails-console"
     profile "org.grails.profiles:angular2"
-    provided "org.codehaus.groovy:groovy-ant"
     runtime "com.h2database:h2"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-datastore-rest-client"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+}
+
+bootRun {
+    jvmArgs('-Dspring.output.ansi.enabled=always')
 }
