actualizada version de angular, solucionados 2 bugs, ahora se puede desloguear de apollo y agregadas algunas cosas para las publicaciones

--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.4",
-    "@angular/compiler": "2.4.4",
-    "@angular/core": "2.4.4",
-    "@angular/forms": "2.4.4",
-    "@angular/http": "2.4.4",
-    "@angular/platform-browser": "2.4.4",
-    "@angular/platform-browser-dynamic": "2.4.4",
-    "@angular/router": "3.4.4",
+    "@angular/common": "2.4.7",
+    "@angular/compiler": "2.4.7",
+    "@angular/compiler-cli": "^2.4.7",
+    "@angular/core": "2.4.7",
+    "@angular/forms": "2.4.7",
+    "@angular/http": "2.4.7",
+    "@angular/platform-browser": "2.4.7",
+    "@angular/platform-browser-dynamic": "2.4.7",
+    "@angular/router": "3.4.7",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/router-store": "^1.2.5",
@@ -31,7 +32,7 @@
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "ngrx-store-localstorage": "^0.1.5",
-    "rxjs": "5.0.3",
+    "rxjs": "5.1.0",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.7.6"
   },
@@ -40,7 +41,8 @@
     "@types/jasmine": "^2.5.41",
     "@types/lodash": "^4.14.50",
     "@types/node": "^7.0.0",
-    "angular-cli": "1.0.0-beta.18",
+    "@angular/cli": "1.0.0-beta.31",
+    "@angular/compiler-cli": "^2.4.7",
     "codelyzer": "2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
