--- a/client/package.json
+++ b/client/package.json
@@ -37,24 +37,24 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.26.1",
-    "@types/jasmine": "^2.5.41",
-    "@types/lodash": "^4.14.50",
-    "@types/node": "^7.0.0",
-    "@angular/cli": "1.0.0-beta.31",
+    "@angular/cli": "^1.0.0-beta.31",
     "@angular/compiler-cli": "^2.4.7",
-    "codelyzer": "2.0.0-beta.4",
+    "@types/googlemaps": "^3.26.1",
+    "@types/jasmine": "^2.5.42",
+    "@types/lodash": "^4.14.52",
+    "@types/node": "^7.0.5",
+    "codelyzer": "2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
-    "karma-remap-istanbul": "^0.4.0",
+    "karma-remap-istanbul": "^0.6.0",
     "ngrx-store-freeze": "^0.1.6",
-    "protractor": "5.0.0",
-    "ts-node": "2.0.0",
-    "tslint": "4.3.1",
+    "protractor": "5.1.1",
+    "ts-node": "2.1.0",
+    "tslint": "4.4.2",
     "typescript": "~2.0.3"
   }
 }
