Cambiados marshallers por gson views
+ Eliminado archivo innecesario.
+ Si el usuario logueado manda su id a usuario/show le devolvera su usuario público.
+ Temporalmente elimine las vistas de administrador en el controlador usuario.
+ Los atributos privados de un usuario pasaron a estar al final del objeto.

--- a/server/grails-app/conf/application.yml
+++ b/server/grails-app/conf/application.yml
@@ -59,6 +59,13 @@ grails:
         encoding: UTF-8
 
 ---
+# If you disable static compilation rendering performance will suffer.
+grails:
+    views:
+        json:
+            compileStatic: false
+
+---
 grails:
     cors:
         enabled: true
