--- a/client/package.json
+++ b/client/package.json
@@ -37,12 +37,11 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.31",
-    "@angular/compiler-cli": "^2.4.7",
     "@types/googlemaps": "^3.26.1",
     "@types/jasmine": "^2.5.42",
     "@types/lodash": "^4.14.52",
     "@types/node": "^7.0.5",
+    "angular-cli": "^1.0.0-beta.18",
     "codelyzer": "2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
