--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "angular2-google-map-auto-complete": "^2.0.5",
     "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
-    "lodash": "^4.17.4",
+    "lodash": "^3.10.0",
     "ngrx-store-localstorage": "^0.1.5",
     "rxjs": "5.1.0",
     "ts-helpers": "^1.1.2",
@@ -38,12 +38,11 @@
   },
   "devDependencies": {
     "@types/googlemaps": "^3.26.1",
-    "@types/jasmine": "^2.5.42",
-    "@types/lodash": "^4.14.52",
+    "@types/lodash": "^3.10.0",
     "@types/node": "^7.0.5",
     "angular-cli": "^1.0.0-beta.18",
     "codelyzer": "2.0.0",
-    "jasmine-core": "2.5.2",
+    "jasmine-core": "2.2.0",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -53,7 +52,7 @@
     "ngrx-store-freeze": "^0.1.6",
     "protractor": "5.1.1",
     "ts-node": "2.1.0",
-    "tslint": "4.4.2",
-    "typescript": "~2.0.3"
+    "tslint": "3.0.0",
+    "typescript": "2.0.10"
   }
 }
