--- a/server/build.gradle
+++ b/server/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile "org.grails.plugins:views-json-templates"
 
     // Propias de Apollo.
+    compile "commons-io:commons-io:2.5"
     compile "org.grails.plugins:spring-security-core:3.1.1"
     compile "org.grails.plugins:spring-security-rest:2.0.0.BUILD-SNAPSHOT"
 
