--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store-log-monitor": "^3.0.2",
     "angular2-google-map-auto-complete": "^2.0.5",
     "angular2-google-maps": "^0.17.0",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "lodash": "^3.10.0",
     "ngrx-store-localstorage": "^0.1.5",
