--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails.plugins:hibernate5:6.0.7"
-        classpath "org.grails.plugins:views-gradle:1.2.0.RC1"
+        classpath "org.grails.plugins:views-gradle:1.2.0"
     }
 }
 
@@ -57,7 +57,7 @@ dependencies {
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.2.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
-    compile "org.grails.plugins:views-json:1.2.0.RC1"
+    compile "org.grails.plugins:views-json:1.2.0"
 
     // Propias de Apollo.
     compile "commons-io:commons-io:2.5"
