--- a/server/grails-app/conf/application.yml
+++ b/server/grails-app/conf/application.yml
@@ -7,15 +7,26 @@ grails:
     spring:
         transactionManagement:
             proxies: false
+    gorm:
+        # Whether to autowire entities.
+        # Disabled by default for performance reasons.
+        autowire: true
+        reactor:
+            # Whether to translate GORM events into Reactor events
+            # Disabled by default for performance reasons
+            events: true
 info:
     app:
         name: '@info.app.name@'
         version: '@info.app.version@'
         grailsVersion: '@info.app.grailsVersion@'
 spring:
+    main:
+        banner-mode: "off"
     groovy:
         template:
             check-template-location: false
+
 # Spring Actuator Endpoints are Disabled by Default
 endpoints:
     enabled: false
@@ -69,6 +80,7 @@ grails:
 grails:
     cors:
         enabled: true
+
 ---
 hibernate:
     cache:
