Arreglar advertencias de Codenarc
+ Eliminar id en favoritos, seguimientos y autorizaciones.
+ Quitar email de perfil público de un usuario (breaking change).

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,7 @@ apply plugin:"codenarc"
 
 codenarc {
     configFile = rootProject.file("server/config/codenarc/codenarc.groovy")
+    toolVersion = "0.25.2"
 }
 
 repositories {
